--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="container">
+      <div class="header">
+        <%= render "header" %>
+      </div>
+      <div class="sidebar">
+        <%= render "sidebar" %>
+      </div>
+      <div class="content">
+        <%= yield %>
+      </div>
+      <div class="footer">
+        <%= render "footer" %>
+      </div>
+    </div>
   </body>
 </html>
