--- a/app/views/tweets/_sidebar.html.erb
+++ b/app/views/tweets/_sidebar.html.erb
@@ -1,13 +1,13 @@
 <nav1>
-    <ul>
-        <li><a href=".">ホーム</a></li>
-        <li><a href=".">話題を検索</a></li>
-        <li><a href=".">通知</a></li>
-        <li><a href=".">メッセージ</a></li>
-        <li><a href=".">ブックマーク</a></li>
-        <li><a href=".">リスト</a></li>
-        <li><a href=".">プロフィール</a></li>
-        <li><a href=".">もっと見る</a></li>
-        <li><%= link_to 'ツイートする', '/tweets/new' %></li>
-    </ul>
+    <ul1>
+        <li class="home"><a href=".">ホーム</a></li>
+        <li class="wa"><a href=".">話題を検索</a></li>
+        <li class="tu"><a href=".">通知</a></li>
+        <li class="msg"><a href=".">メッセージ</a></li>
+        <li class="bo"><a href=".">ブックマーク</a></li>
+        <li class="ri"><a href=".">リスト</a></li>
+        <li class="pro"><a href=".">プロフィール</a></li>
+        <li class="mo"><a href=".">もっと見る</a></li>
+        <li><a href="/tweets/new" class="btn-gradient-radius">ツイートする</a></li>
+    </ul1>
 </nav1>
