--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,5 +1,7 @@
 <%= form_for @tweet , url: {action: :update} do |f| %>
 <%= f.label :message, 'ツイート' %>
 <%= f.text_field :message %>
+<%= f.label :file, '画像' %>
+<%= f.file_field :file %>
 <%= f.submit '更新' %>
 <% end %>
